--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ body {
   margin: auto;
 }
 
-header {
+header,
+nav {
   background: rgba(8, 3, 34, 0.932);
   color: white;
   padding: 10px 20px;
@@ -39,14 +40,20 @@ h2 {
 }
 
 nav {
-  display: flex;
-  column-gap: 2rem;
   font-size: 1.2rem;
+}
+.nav_label {
+  font-size: 500;
+}
+.nav_detail {
+  font-size: 400;
+  color: azure;
 }
 nav > p {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  /* flex-direction: column; */
+  column-gap: 1rem;
+  /* justify-content: center; */
   text-align: center;
 }
 main {
